--- a/typography.html
+++ b/typography.html
@@ -15,8 +15,8 @@
     <header class="primary">
         <nav class="navbar bg-light">
             <div class="container text-muted border-bottom">
-              <a class="navbar-brand" href="#">
-                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+                <a class="navbar-brand" href="index.html">
+                    <img class="jaw-brand" src="assets/images/jaw-brand.png" alt="JAW"></a>
                 <ul class="nav justify-content-end">
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html">PROJECTS</a>
@@ -47,7 +47,7 @@
                     <h1>TYPOGRAPHY 2021</h1>
                     <p>Design <em>is</em> communication. So here are a few art pieces that I've created while attending ARST 3341: Typography.
                         These pieces are an exploration of the art and practice of typography as a tool for visual communication.
-                        You can click on each image for a larger view.</p>
+                        You may click on each image for a larger view.</p>
                 </div>
                 <div class="col-8 col-md-5">
                     <a href="assets/images/info-type-1.1.webp"><img src="assets/images/info-type-1.1.webp" alt="information type-1 creatively rearranged using typography principles"></a>    
@@ -72,8 +72,8 @@
             <div class="row justify-content-between">
                 <div class="col-md-5">
                     <h1>GRAPHIC DESIGN 2021</h1>
-                    <p>To the right and below are editorial designs of fictional organizations that communicate a controversial issue of my choosing. Projects
-                        were completed as part of the course, ARST 3340: Intro To Graphic Design.
+                    <p>To the right and below are editorial designs of fictional organizations that communicate a controversial issue of my choosing. 
+                        Completed as part of the course, ARST 3340: Intro To Graphic Design.
                     </p>
                 </div>
                 <div class="col-8 col-md-5">
