--- a/technical-doc.html
+++ b/technical-doc.html
@@ -15,8 +15,8 @@
     <header class="primary">
         <nav class="navbar bg-light">
             <div class="container text-muted border-bottom">
-              <a class="navbar-brand" href="#">
-                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+              <a class="navbar-brand" href="index.html">
+                <img class="jaw-brand" src="assets/images/jaw-brand.png" alt="JAW"></a>
                 <ul class="nav justify-content-end">
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html">PROJECTS</a>
@@ -41,18 +41,28 @@
       <article class="article-1">
         <div class="row justify-content-between">
             <div class="col-md-5">
-              <h1>VIEWING YOUR PROTOTYPE WITH ADOBE XD 2022</h1>
-              <p>Not everyone is familiar with Adobe XD, and certainly not our clients who seek us to design their vision. Creating a prototype 
-    means little if our client doesn't know how to use the software to view it. So I created a short instructional document on
-    how to view a website prototype through Adobe XD.</p>
-              <a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the document.</a>
+              <h1>ADOBE XD & WORDPRESS GUIDE 2022</h1>
+              <p>Not everyone is familiar with Adobe XD or Wordpress, and creating a prototype & website
+    means little if our client doesn't know how to use the application. So I created a short instructional document on
+    how to view a website prototype through Adobe XD, and a short quide on how to use certain features within WordPress.</p>
+              <p><a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the Adobe XD document</a>.</p>
+              <p><a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the WordPress Guide</a>.</p>
             </div>
             <div class="col-md-4">
               <img src="assets/images/xd.50.png">
             </div>
+            <div class="col-md-4">
+              <img src="assets/images/wordpress.png">
+            </div>
         </div>
       </article>
     </section>
+    <div class="credits">
+      <h2>CREDITS</h2>
+      <ul>
+          <li>Copywriters, <em>WordPress Guide</em>: Michael Gray & Victoria Wells</li>
+      </ul>
+    </div>
 <!--Image of prototype to the right of text-->
 <!--Image of prototype under text on the left-->
 <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
