--- a/reflection.html
+++ b/reflection.html
@@ -37,7 +37,7 @@
       <div class="container reflection">
         <!--Adobe after effects full width-->
         <section class="info">
-            <div class="row">
+            <div class="row feature">
                 <div class="col-md">
                     <div class="google-slides-container">
                     <iframe class="embed-responsive-item" src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000"  width="960" height="569"></iframe>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="row justify-content-end">
-                <div class="col-md-8">
+                <div class="col-md-8 transition tag">
                     <dl class="reflection-2">
                         <dt>My most powerful learning moments and what made them so...</dt>
                         <dd>Long before this program, I’ve learned there’s no use in controlling others. The better way
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8 transition tag">
                     <dl class="reflection-3">
                         <dt>The most interesting discoveries I made about designing, about myself, and about others...</dt>
                         <dd>I discovered that I just want to become a better version of myself. Developing a healthier version of ourselves is kind of
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div class="row justify-content-end">
-                <div class="col-md-8">
+                <div class="col-md-8 transition tag">
                     <dl class="reflection-4">
                         <dt>The most important thing I learned personally...</dt>
                         <dd>Most of us wait for life to happen to us, but we all have the potential to make life happen. Making life happen doesn't 
@@ -158,5 +158,6 @@
 </footer>
         </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="assets/js/transition.js"></script>
 </body>
 </html>
