--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
         </div>
     </header>
     <div class="container projects">
-    <section class="web-design-projects">
+    <section class="web-design-projects fade-in-image">
         <article class="article-1">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-5">
@@ -169,7 +169,7 @@
     <!--End Section-->
       
     <!--Section & Articles-->
-    <section class="ux-projects">
+    <section class="ux-projects fade-in-image">
         <article class="article-2">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-3">        
@@ -242,7 +242,7 @@
 
 
     <!--Section & Articles-->
-    <section class="database-projects">
+    <section class="database-projects fade-in-image">
         <article class="article-3">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-4">    
@@ -331,7 +331,7 @@
 
 
     <!--Section & Articles-->
-    <section class="communication-skills">
+    <section class="communication-skills fade-in-image">
         <article class="article-4">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-3">
@@ -395,7 +395,7 @@
 
 
     <!--Section & Articles-->
-    <section class="writing-skills">
+    <section class="writing-skills fade-in-image">
         <article class="article-5">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-5">    
