--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -32,7 +32,7 @@
         </div>
     </header>
     <div class="container web-buffalo">
-      <div class="row feature">
+      <div class="row feature fade-in-image">
         <div class="col-md">
           <img src="assets/images/buffalo-web.webp" alt="a preview of the buffalo river website homepage">
         </div>
@@ -54,10 +54,11 @@
             <img src="assets/images/canoeing.webp" alt="woman canoeing on the buffalo river in arkansas">
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 scroll-reveal box tag">
           <img src="assets/images/mobile-buffalo.gif" alt="an animated illustration of the buffalo river website on a mobile phone with a mobile menu sliding open from left to right">
         </div>
       </div>
+      <h2class="loader">hello</h2>
     </article>
     </section>
 
@@ -82,5 +83,6 @@
   </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="assets/js/transition.js"></script>
 </body>
 </html>
