--- a/database.html
+++ b/database.html
@@ -34,7 +34,7 @@
 <!--JUMBOTRON HERE-->
 <!--SECTION/ARTICES-->
   <div class="container database">
-    <div class="row feature">
+    <div class="row feature fade-in-image">
       <div class="col-12">
         <img src="assets/images/google.webp" class="img-fluid" alt="google workspace homepage">
       </div>
@@ -51,7 +51,7 @@
         <p><a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0" target="blank">
           Check it out on Google Sheets</a>.</p>
       </div>
-      <div class="col-md">
+      <div class="col-md scroll-reveal box tag">
         <img src="assets/images/database-assessment.1.webp" class="img-fluid" alt="a google sheet database assessment">
       </div>
     </div>
@@ -59,14 +59,14 @@
 
     <article class="article-2">
     <div class="row gx-5 justify-content-between">
-      <div class="col-md">
+      <div class="col-md scroll-reveal box tag">
         <img src="assets/images/database-inventory.1.webp" class="img-fluid" alt="a google sheet inventory database">
       </div>
       <div class="col-md-5">
         <h1>INVENTORY DATABASE</h1>
         <p>Another database exercise of jewelry inventory.</p>
-        <a href="https://docs.google.com/spreadsheets/d/1BW0xTsDj11Ng4rZ5d2E6kgT7OSWvgPt40e6rlMMmazM/edit#gid=0" target="blank">
-          Check it out on Google Sheets.</a>
+        <p><a href="https://docs.google.com/spreadsheets/d/1BW0xTsDj11Ng4rZ5d2E6kgT7OSWvgPt40e6rlMMmazM/edit#gid=0" target="blank">
+          Check it out on Google Sheets</a>.</p>
       </div>
     </div>
     </article>
@@ -84,5 +84,6 @@
 </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="assets/js/transition.js"></script>
 </body>
 </html>
