--- a/programming.html
+++ b/programming.html
@@ -33,7 +33,7 @@
     </header>
     <div class="container programming">
         
-        <div class="row feature">
+        <div class="row feature fade-in-image">
             <div class="col-12">
                 <img src="assets/images/mars-explorer-2.webp" alt="screen image of mars rover program">
             </div>
@@ -51,7 +51,7 @@
                     <p>To the right, is an application of JSON to retreive & convert currency values from Polygon.io.</p>
                     <p><a href="" target="blank">Test the Currency Value application here</a>.</p>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 scroll-reveal box tag">
                 <img src="assets/images/currency-value.webp" alt="screen image of currecy value program">
             </div>
         </div>
@@ -71,5 +71,6 @@
         </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="assets/js/transition.js"></script>
 </body>
 </html>
