--- a/reflection.html
+++ b/reflection.html
@@ -37,7 +37,7 @@
       <div class="container reflection">
         <!--Adobe after effects full width-->
         <section class="info">
-            <div class="row feature">
+            <div class="row feature fade-in-image">
                 <div class="col-md">
                     <div class="google-slides-container">
                     <iframe class="embed-responsive-item" src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000"  width="960" height="569"></iframe>
@@ -77,7 +77,7 @@
             <h2>REFLECTION</h2>
             <p>...here are some of the treasures I've discovered during my capstone project...</p>
         </div>
-            <div class="row">
+            <div class="row scroll-reveal box tag">
                 <div class="col-md-8">
                     <dl class="reflection-1">
                         <dt>My most challenging moments and what made them so...</dt>
@@ -91,8 +91,8 @@
                     </dl>
                 </div>
             </div>
-            <div class="row justify-content-end">
-                <div class="col-md-8 transition tag">
+            <div class="row justify-content-end scroll-reveal box tag">
+                <div class="col-md-8">
                     <dl class="reflection-2">
                         <dt>My most powerful learning moments and what made them so...</dt>
                         <dd>Long before this program, I’ve learned there’s no use in controlling others. The better way
@@ -110,8 +110,8 @@
                     </dl>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-8 transition tag">
+            <div class="row scroll-reveal box tag">
+                <div class="col-md-8">
                     <dl class="reflection-3">
                         <dt>The most interesting discoveries I made about designing, about myself, and about others...</dt>
                         <dd>I discovered that I just want to become a better version of myself. Developing a healthier version of ourselves is kind of
@@ -124,8 +124,8 @@
                     </dl>
                 </div>
             </div>
-            <div class="row justify-content-end">
-                <div class="col-md-8 transition tag">
+            <div class="row justify-content-end scroll-reveal box tag">
+                <div class="col-md-8">
                     <dl class="reflection-4">
                         <dt>The most important thing I learned personally...</dt>
                         <dd>Most of us wait for life to happen to us, but we all have the potential to make life happen. Making life happen doesn't 
