--- a/technical-doc.html
+++ b/technical-doc.html
@@ -32,7 +32,7 @@
         </div>
     </header>
     <div class="container">
-      <div class="row feature">
+      <div class="row feature fade-in-image">
         <div class="col-md">
           <img src="assets/images/technical-doc.webp">
         </div>
@@ -48,7 +48,7 @@
               <p><a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the Adobe XD document</a>.</p>
               <p><a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the WordPress Guide</a>.</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 scroll-reveal box tag">
               <img src="assets/images/xd.50.png">
             </div>
         </div>
@@ -75,5 +75,6 @@
 </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="assets/js/transition.js"></script>
 </body>
 </html>
