--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -50,7 +50,7 @@
               project. Later, my primary responsibility became mobile css development.</dd>
           </dl>
           <p><a href="" target="blank">Visit the site</a>.</p>
-          <div class="wrap">
+          <div class="wrap scroll-reveal box tag">
             <img src="assets/images/canoeing.webp" alt="woman canoeing on the buffalo river in arkansas">
           </div>
         </div>
@@ -58,7 +58,6 @@
           <img src="assets/images/mobile-buffalo.gif" alt="an animated illustration of the buffalo river website on a mobile phone with a mobile menu sliding open from left to right">
         </div>
       </div>
-      <h2class="loader">hello</h2>
     </article>
     </section>
 
