--- a/film.html
+++ b/film.html
@@ -33,7 +33,7 @@
     </header>
 
     <div class="container film">
-        <div class="row feature">
+        <div class="row feature fade-in-image">
           <div class="embed-responsive embed-responsive-16by9">
           <iframe id="guardianship" class="embed-responsive-item youtube" src="https://www.youtube.com/embed/4Z8RX-mrl3I" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      
           </div>
