--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
         </div>
     </header>
     <div class="container projects">
-    <section class="web-design-projects fade-in-image">
+    <section class="web-design-projects">
         <article class="article-1">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-5">
@@ -46,7 +46,7 @@
                 </p>
                 <p><q>Design is the intermediary between information and understanding.</q> -Hans Hoffman, artist and teacher</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 scroll-reveal box tag">
                 <a href="web-buffalo-river.html">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 136.34 186.13" enable-background="new 0 0 136.34 186.13" xml:space="preserve">
@@ -123,7 +123,7 @@
                </svg>
               </a>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 scroll-reveal box tag">
                 <a href="web-university-district.html">
                     <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 181.8 136.3" style="enable-background:new 0 0 181.8 136.3;" xml:space="preserve">
@@ -169,10 +169,10 @@
     <!--End Section-->
       
     <!--Section & Articles-->
-    <section class="ux-projects fade-in-image">
+    <section class="ux-projects">
         <article class="article-2">
         <div class="row align-items-center justify-content-between">
-            <div class="col-md-3">        
+            <div class="col-md-3 scroll-reveal box tag">        
                 <a href="ux-campus-food.html">
                     <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 247 78.7" style="enable-background:new 0 0 247 78.7;" xml:space="preserve">
@@ -189,7 +189,7 @@
                </svg>
                 </a>
             </div>
-            <div class="col-md-2">        
+            <div class="col-md-2 scroll-reveal box tag">        
                 <a href="ux-campus-police.html">
                     <svg version="1.1" id="Layer_4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 151.82 162" enable-background="new 0 0 151.82 162" xml:space="preserve">
@@ -242,14 +242,14 @@
 
 
     <!--Section & Articles-->
-    <section class="database-projects fade-in-image">
+    <section class="database-projects">
         <article class="article-3">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-4">    
                 <h1>DATABASE & PROGRAMMING</h1>
                 <p><q>Design adds value faster than it adds costs.</q> -- Joel Spolsky, web programmer, writer, and creator of Trello</p>
             </div>
-            <div class="col-md-3">        
+            <div class="col-md-3  scroll-reveal box tag">        
                 <a href="database.html">
                     <svg version="1.1" id="Layer_5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 281.4 130.77" enable-background="new 0 0 281.4 130.77" xml:space="preserve">
@@ -284,7 +284,7 @@
                </svg>
                 </a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4  scroll-reveal box tag">
                 <a href="programming.html">
                     <svg version="1.1" id="Layer_6" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 314.16 70.47" enable-background="new 0 0 314.16 70.47" xml:space="preserve">
@@ -331,10 +331,10 @@
 
 
     <!--Section & Articles-->
-    <section class="communication-skills fade-in-image">
+    <section class="communication-skills">
         <article class="article-4">
         <div class="row align-items-center justify-content-between">
-            <div class="col-md-3">
+            <div class="col-md-3 scroll-reveal box tag">
                 <a href="film.html">
                     <svg version="1.1" id="Layer_7" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 170 130" enable-background="new 0 0 170 130" xml:space="preserve">
@@ -350,7 +350,7 @@
                </svg>
                 </a>
             </div>
-            <div class="col-md-3">        
+            <div class="col-md-3 scroll-reveal box tag">        
                 <a href="typography.html">
                     <svg version="1.1" id="Layer_8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 200 158.64" enable-background="new 0 0 200 158.64" xml:space="preserve">
@@ -395,14 +395,14 @@
 
 
     <!--Section & Articles-->
-    <section class="writing-skills fade-in-image">
+    <section class="writing-skills">
         <article class="article-5">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-5">    
                 <h1>WRITING</h1>
                 <p><q>Design is intelligence made visible.</q> -- Alina Wheeler, author</p>
                 <p><q>Every great design begins with an even better story.</q> -- Lorinda Mamo, designer and creative director</p></div>
-            <div class="col-md">        
+            <div class="col-md scroll-reveal box tag">        
                 <a href="technical-doc.html">
                     <svg version="1.1" id="Layer_9" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 400 130.77" enable-background="new 0 0 400 130.77" xml:space="preserve">
@@ -460,7 +460,7 @@
                </svg>
                </a>
             </div>
-            <div class="col-md">        
+            <div class="col-md scroll-reveal box tag">        
                 <a href="reflection.html">
                     <svg version="1.1" id="Layer_10" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 281.4 130.77" enable-background="new 0 0 281.4 130.77" xml:space="preserve">
@@ -517,5 +517,6 @@
 </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="assets/js/transition.js"></script>
 </body>
 </html>
