--- a/ux-campus-food.html
+++ b/ux-campus-food.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <div class="container">
-        <div class="row">
+        <div class="row feature fade-in-image">
             <div class="col-md">
                 <a href="">image</a>
             </div>
@@ -67,5 +67,6 @@
 </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="assets/js/transition.js"></script>
 </body>
 </html>
