--- a/ux-campus-police.html
+++ b/ux-campus-police.html
@@ -33,7 +33,7 @@
     </header>
     <main class="flex-shrink-0">
     <div class="container">
-      <div class="row">
+      <div class="row feature fade-in-image">
         <div class="col-md"><a href="">Image</a></div>      
       </div>
     <section class="info">
@@ -66,5 +66,6 @@
 </div>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="assets/js/transition.js"></script>
 </body>
 </html>
