--- a/web-university-district.html
+++ b/web-university-district.html
@@ -32,7 +32,7 @@
         </div>
     </header>
   <div class="container web-ud">
-    <div class="row feature">
+    <div class="row feature fade-in-image">
       <div class="col-md">
         <img src="assets/images/ud-web.webp" alt="a preview of the university district website homepage">
       </div>
@@ -49,11 +49,11 @@
             <dd>As the UX developer, I was responsible for designing the website (and prototype) using UI/UX principles and for developing the wordpress layouts.</dd>
           </dl>
           <p><a href="" target="blank">Visit the site</a>.</p>
-          <div class="wrap">
+          <div class="wrap scroll-reveal box tag">
             <img src="assets/images/ud-heart.webp" alt="hand holding a plastic heart">
           </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 scroll-reveal box tag">
         <img src="assets/images/mobile-ud.png" alt="an illustration of the university district website on a mobile phone">
       </div>
     </div>
@@ -77,5 +77,6 @@
   </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="assets/js/transition.js"></script>
 </body>
 </html>
