--- a/reflection.html
+++ b/reflection.html
@@ -74,9 +74,10 @@
 
         <article class="growth">
             <div class="wrap">
-            <h2>REFLECTION</h2>
-            <p>...here are some of the treasures I've discovered during my capstone project...</p>
-        </div>
+                <h2>REFLECTION</h2>
+                <p>...here are some of the treasures I've discovered during my capstone project...</p>
+            </div>
+            <div class="reflect">
             <div class="row scroll-reveal box tag">
                 <div class="col-md-8">
                     <dl class="reflection-1">
@@ -139,6 +140,7 @@
                             For a visual of growing into freedom, check out my animation below, <em>Watch Me Grow</em>.
                         </dd>
                     </dl>
+                </div>
                 </div>
             </div>
            </article>
