--- a/programming.html
+++ b/programming.html
@@ -47,7 +47,7 @@
                         Here are a couple of programming projects I developed while attending ITEC 3650: Guided Applications In IT.</p>
                     <p>Above, is a JSON API retrieval of the Mars Rover photos from NASA that I developed. Actually, it's just an
                     image of the API retrieval, but you may click the link below to check out the application.</p>
-                    <p><a href="" target="blank">Test the Mars Rover application here</a>.</p>
+                    <p><a href="mars-rover/index.html" target="blank">Test the Mars Rover application here</a>.</p>
                     <p>To the right, is an application of JSON to retreive & convert currency values from Polygon.io.</p>
                     <p><a href="" target="blank">Test the Currency Value application here</a>.</p>
             </div>
