--- a/database.html
+++ b/database.html
@@ -48,7 +48,7 @@
           Microsoft excel, but there's no harm in getting comfy using Google Sheets, too. So here are a 
           couple of exercies that I completed within Google Sheets while attending ITEC 3610: Intro to IT & Apps. To the right is an 
           image of a database assessment that I completed.</P>
-        <p><a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0" target="blank">
+        <p><a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0">
           Check it out on Google Sheets</a>.</p>
       </div>
       <div class="col-md scroll-reveal box tag">
@@ -65,7 +65,7 @@
       <div class="col-md-5">
         <h1>INVENTORY DATABASE</h1>
         <p>Another database exercise of jewelry inventory.</p>
-        <p><a href="https://docs.google.com/spreadsheets/d/1BW0xTsDj11Ng4rZ5d2E6kgT7OSWvgPt40e6rlMMmazM/edit#gid=0" target="blank">
+        <p><a href="https://docs.google.com/spreadsheets/d/1BW0xTsDj11Ng4rZ5d2E6kgT7OSWvgPt40e6rlMMmazM/edit#gid=0">
           Check it out on Google Sheets</a>.</p>
       </div>
     </div>
