--- a/technical-doc.html
+++ b/technical-doc.html
@@ -45,8 +45,8 @@
               <p>Not everyone is familiar with Adobe XD or Wordpress, and creating a prototype & website
     means little if our client doesn't know how to use the application. So I created a short instructional document on
     how to view a website prototype through Adobe XD, and a short quide on how to use certain features within WordPress.</p>
-              <p><a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the Adobe XD document</a>.</p>
-              <p><a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the WordPress Guide</a>.</p>
+              <p><a href="assets/documents/viewing-your-prototype.pdf">View the Adobe XD document</a>.</p>
+              <p><a href="assets/documents/wordpress-guide.pdf">View the WordPress Guide</a>.</p>
             </div>
             <div class="col-md-4 scroll-reveal box tag">
               <img src="assets/images/xd.50.png">
