--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -49,7 +49,7 @@
             <dd>As the project manager, I was responsible for managing all project tasks, scheduling, and communication regarding our 
               project. Later, my primary responsibility became mobile css development.</dd>
           </dl>
-          <p><a href="" target="blank">Visit the site</a>.</p>
+          <p><a href="buffalo-river/index.html" target="blank">Visit the site</a>.</p>
           <div class="wrap scroll-reveal box tag">
             <img src="assets/images/canoeing.webp" alt="woman canoeing on the buffalo river in arkansas">
           </div>
