--- a/web-university-district.html
+++ b/web-university-district.html
@@ -48,7 +48,7 @@
             <dt>My Role</dt>
             <dd>As the UX developer, I was responsible for designing the website (and prototype) using UI/UX principles and for developing the wordpress layouts.</dd>
           </dl>
-          <p><a href="" target="blank">Visit the site</a>.</p>
+          <p><a href="https://web-projects.net/ud/" target="blank">Visit the site</a>.</p>
           <div class="wrap scroll-reveal box tag">
             <img src="assets/images/ud-heart.webp" alt="hand holding a plastic heart">
           </div>
