currency-value-program

--- a/programming.html
+++ b/programming.html
@@ -49,7 +49,7 @@
                     image of the API retrieval, but you may click the link below to check out the application.</p>
                     <p><a href="mars-rover/index.html">Test the Mars Rover application here</a>.</p>
                     <p>To the right, is an application of JSON to retreive & convert currency values from Polygon.io.</p>
-                    <p><a href="currency-value/index.html">Test the Currency Value application here</a>.</p>
+                    <p><a href="currency-value-history/index.html">Test the Currency Value application here</a>.</p>
             </div>
             <div class="col-md-5 scroll-reveal box tag">
                 <img src="assets/images/currency-value.webp" alt="screen image of currecy value program">
