--- a/currency-value-history/index.html
+++ b/currency-value-history/index.html
@@ -75,7 +75,7 @@
     <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/conversion.js"></script>
     <script src="assets/js/chart.js"></script>
 
 </body>
