--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
     <div class="container intro">
     <section class="intro">
-        <div class="row about" >
-            <div class="col-md-8">
+        <div class="row about justify-content-between">
+            <div class="col-md-7">
             <h1>Hey, I'm Josephine.</h1>
                 <p>I'm a designer and am currently studying at the University of Arkansas at 
                 Little Rock (UALR). I'll be graduating this December 2022 with a 
@@ -90,6 +90,5 @@
     </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
-<script src="assets/js/external-links.js"></script>
 </body>
 </html>
