--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
     
         <ul class="nav col-md-4 mb-3 align-items-center justify-content-end list-unstyled d-flex">
-          <li class="ms-3"><a class="text-muted" data-mce-href="mailto:joweathington@gmail.com" href="mailto:joweathington@gmail.com">EMAIL</a></li>
+          <li class="ms-3"><a class="text-muted" href="mailto:joweathington@gmail.com">EMAIL</a></li>
           <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/josephine-aaron-weathington/">LINKEDIN</a></li>
         </ul>
     </footer>
