--- a/reflection.html
+++ b/reflection.html
@@ -19,7 +19,7 @@
         <nav class="navbar bg-light">
             <div class="container text-muted border-bottom">
               <a class="navbar-brand" href="#">
-                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+                <img class="jaw-brand" src="assets/images/jaw-brand.png" alt="JAW"></a>
                 <ul class="nav justify-content-end">
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html">PROJECTS</a>
@@ -154,9 +154,9 @@
     </div>
 
     <ul class="nav col-md-4 mb-3 align-items-center justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-muted" href="#">EMAIL</a></li>
-      <li class="ms-3"><a class="text-muted" href="#">LINKEDIN</a></li>
-    </ul>
+        <li class="ms-3"><a class="text-muted" href="mailto:joweathington@gmail.com">EMAIL</a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/josephine-aaron-weathington/">LINKEDIN</a></li>
+      </ul>
 </footer>
         </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
