--- a/reflection.html
+++ b/reflection.html
@@ -37,7 +37,7 @@
       <div class="container reflection">
         <!--Adobe after effects full width-->
         <section class="info">
-            <div class="row feature fade-in-image">
+              <div class="row feature fade-in-image">
                 <div class="col-md">
                     <div class="google-slides-container">
                     <iframe class="embed-responsive-item" src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000"  width="960" height="569"></iframe>
@@ -80,7 +80,7 @@
             <div class="reflect">
             <div class="row scroll-reveal box tag">
                 <div class="col-md-8">
-                    <dl class="reflection-1">
+                    <dl class="msg">
                         <dt>My most challenging moments and what made them so...</dt>
                         <dd>A good web design might look simple and easy, but it’s far from linear, especially when the site contains 
                             a lot of content. Web development is a balancing act between form and function. Finding a good starting 
@@ -94,7 +94,7 @@
             </div>
             <div class="row justify-content-end scroll-reveal box tag">
                 <div class="col-md-8">
-                    <dl class="reflection-2">
+                    <dl class="msg">
                         <dt>My most powerful learning moments and what made them so...</dt>
                         <dd>Long before this program, I’ve learned there’s no use in controlling others. The better way
                              includes cooperation and adaptation. Thanks to this program, I’ve become better at that and I’ve 
@@ -113,7 +113,7 @@
             </div>
             <div class="row scroll-reveal box tag">
                 <div class="col-md-8">
-                    <dl class="reflection-3">
+                    <dl class="msg">
                         <dt>The most interesting discoveries I made about designing, about myself, and about others...</dt>
                         <dd>I discovered that I just want to become a better version of myself. Developing a healthier version of ourselves is kind of
                              like developing a good website. You begin with the content first, then style, then functionality. Progressive enhancement, 
@@ -127,7 +127,7 @@
             </div>
             <div class="row justify-content-end scroll-reveal box tag">
                 <div class="col-md-8">
-                    <dl class="reflection-4">
+                    <dl class="msg">
                         <dt>The most important thing I learned personally...</dt>
                         <dd>Most of us wait for life to happen to us, but we all have the potential to make life happen. Making life happen doesn't 
                             mean doing whatever we want when we want, but doing what we can with what we know to create that something that increases our chances 
@@ -146,7 +146,7 @@
            </article>
         </section>
 <!--ANIMATION VIDEO-->
-<a href="">Animation</a>
+<a href="">Animation...coming soon...</a>
 <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
