--- a/reflection.html
+++ b/reflection.html
@@ -74,6 +74,7 @@
 
         <article class="growth">
             <div class="wrap">
+                <div class="waves"></div>
                 <h2>REFLECTION</h2>
                 <p>...here are some of the treasures I've discovered during my capstone project...</p>
             </div>
@@ -143,6 +144,7 @@
                 </div>
                 </div>
             </div>
+            <div class="waves"></div>
            </article>
         </section>
 <!--ANIMATION VIDEO-->
