--- a/projects.html
+++ b/projects.html
@@ -42,9 +42,9 @@
             <div class="col-md-5">
                 <h1>WEB DEVELOPMENT & DESIGN</h1>
                 <p><q>Learning has little meaning unless it produces a sustained and substantial influence on the way people think, act, and feel.</q>
-                    - Intro to IT & Applications <abbr title="University of Arkansas at Little Rock">UALR</abbr> 
+                    -- Intro to IT & Applications <abbr title="University of Arkansas at Little Rock">UALR</abbr> 
                 </p>
-                <p><q>Design is the intermediary between information and understanding.</q> -Hans Hoffman, artist and teacher</p>
+                <p><q>Design is the intermediary between information and understanding.</q> -- Hans Hoffman, artist and teacher</p>
             </div>
             <div class="col-md-2 scroll-reveal box tag">
                 <a href="web-buffalo-river.html">
