--- a/reflection.html
+++ b/reflection.html
@@ -36,7 +36,7 @@
     </header>
       <div class="container reflection">
         <!--Adobe after effects full width-->
-        <section class="info">
+           <section class="info">
               <div class="row feature fade-in-image">
                 <div class="col-md">
                     <div class="google-slides-container">
@@ -45,8 +45,8 @@
                 </div>
             </div>
             <article class="article-1">
-             <div class="row">
-                <div class="col-md-8">
+             <div class="row align-items-center justify-content-between">
+                <div class="col-sm col-md-8">
                     <h1>CAPSTONE PROJECT</h1>
                     <p>I've learned and discovered many things while completing UALR's web development program. I can't write about it all,
                         but at least I can share a little bit of what I've discovered while developing my Capstone Project - the University District's website.</p>
@@ -69,9 +69,8 @@
                         process by skipping to <em>page 5</em> of my team’s Google Slides presentation, above.</dd>
                     </dl>
                 </div>
-                </div>
-              </article>
-
+              </div>
+            </article>
         <article class="growth">
             <div class="wrap">
                 <div class="waves"></div>
