--- a/technical-doc.html
+++ b/technical-doc.html
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="row feature fade-in-image">
         <div class="col-md">
-          <img src="assets/images/technical-doc.webp">
+          <img src="assets/images/technical-doc.webp" alt="abstract illustration of a grey background with blue and black diagonal lines">
         </div>
       </div>
     <section class="info">
@@ -49,7 +49,7 @@
               <p><a href="assets/documents/wordpress-guide.pdf">View the WordPress Guide</a>.</p>
             </div>
             <div class="col-md-4 scroll-reveal box tag">
-              <img src="assets/images/xd.50.png">
+              <img src="assets/images/xd.50.png" alt="cover page of the viewing your prototype document">
             </div>
         </div>
       </article>
@@ -62,7 +62,9 @@
     </div>
 <!--Image of prototype to the right of text-->
 <!--Image of prototype under text on the left-->
-<footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+</div>
+<footer class="footer">
+  <div class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
   <div class="col-md-4 d-flex align-items-center">
     <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
   <!--brand logo here-->
@@ -72,8 +74,8 @@
     <li class="ms-3"><a class="text-muted" href="mailto:joweathington@gmail.com">EMAIL</a></li>
     <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/josephine-aaron-weathington/">LINKEDIN</a></li>
   </ul>
-</footer>
 </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 <script src="assets/js/transition.js"></script>
 </body>
