--- a/film.html
+++ b/film.html
@@ -83,7 +83,9 @@
       <li>Videographer, <em>Can't Escape the Mischief</em>: Angel Jones</li>
   </ul>
 </div>
-<footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+</div>
+<footer class="footer">
+  <div class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
   <div class="col-md-4 d-flex align-items-center">
     <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
   <!--brand logo here-->
@@ -93,8 +95,8 @@
     <li class="ms-3"><a class="text-muted" href="mailto:joweathington@gmail.com">EMAIL</a></li>
     <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/josephine-aaron-weathington/">LINKEDIN</a></li>
   </ul>
+  </div>
 </footer>
-</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
