--- a/munch.html
+++ b/munch.html
@@ -18,7 +18,7 @@
         <nav class="navbar bg-light">
             <div class="container text-muted border-bottom">
               <a class="navbar-brand" href="#">
-                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24"></a>
+                <img class="jaw-brand" src="assets/images/jaw-brand.png" alt="JAW"></a>
                 <ul class="nav justify-content-end">
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html">PROJECTS</a>
@@ -33,7 +33,7 @@
         Josephine Aaron Weathington
         </div>
     </header>
-    <div class="container">
+    <div class="container munch">
         <div class="row feature fade-in-image">
             <div class="col-md">
                 <a href="">image</a>
@@ -54,7 +54,9 @@
         </div>
         </section>
 <!--END OF ARTICLES-->
-<footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+</div>
+<footer class="footer">
+  <div class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
   <div class="col-md-4 d-flex align-items-center">
     <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
   <!--brand logo here-->
@@ -64,8 +66,8 @@
     <li class="ms-3"><a class="text-muted" href="mailto:joweathington@gmail.com">EMAIL</a></li>
     <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/josephine-aaron-weathington/">LINKEDIN</a></li>
   </ul>
-</footer>
 </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 <script src="assets/js/transition.js"></script>
 </body>
