--- a/projects.html
+++ b/projects.html
@@ -173,7 +173,7 @@
         <article class="article-2">
         <div class="row align-items-center justify-content-between">
             <div class="col-md-3 scroll-reveal box tag">        
-                <a href="ux-campus-food.html">
+                <a href="munch.html">
                     <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 247 78.7" style="enable-background:new 0 0 247 78.7;" xml:space="preserve">
                <g>
@@ -502,20 +502,20 @@
         </article>
     </section>
     <!--End Section-->
-
-
-<footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+</div>
+<footer class="footer">
+    <div class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
     <!--brand logo here-->
     </div>
-
+  
     <ul class="nav col-md-4 mb-3 align-items-center justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-muted" href="mailto:joweathington@gmail.com">EMAIL</a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/josephine-aaron-weathington/">LINKEDIN</a></li>
-      </ul>
-</footer>
-</div>
+      <li class="ms-3"><a class="text-muted" href="mailto:joweathington@gmail.com">EMAIL</a></li>
+      <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/josephine-aaron-weathington/">LINKEDIN</a></li>
+    </ul>
+  </div>
+  </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 <script src="assets/js/transition.js"></script>
 </body>
