--- a/reflection.html
+++ b/reflection.html
@@ -35,18 +35,15 @@
         </div>
     </header>
       <div class="container reflection">
+        <video class="feature fade-in-image" controls autoplay loop>
+            <source src="assets/video/flowering-1.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <!--Adobe after effects full width-->
            <section class="info">
-              <div class="row feature fade-in-image">
-                <div class="col-md">
-                    <div class="google-slides-container">
-                    <iframe class="embed-responsive-item" src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000"  width="960" height="569"></iframe>
-                    </div>
-                </div>
-            </div>
             <article class="article-1">
-             <div class="row align-items-center justify-content-between">
-                <div class="col-sm col-md-8">
+             <div class="row  gx-5 justify-content-between">
+                <div class="col-sm col-lg-7">
                     <h1>CAPSTONE PROJECT</h1>
                     <p>I've learned and discovered many things while completing UALR's web development program. I can't write about it all,
                         but at least I can share a little bit of what I've discovered while developing my Capstone Project - the University District's website.</p>
@@ -68,6 +65,11 @@
                         responsive design and accessibility.  Finally, we presented our final product to our client and class. Feel free to check out our design 
                         process by skipping to <em>page 5</em> of my team’s Google Slides presentation, above.</dd>
                     </dl>
+                </div>
+                <div class="col-lg">
+                    <div class="google-slides-container">
+                    <iframe class="embed-responsive-item" src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000"  width="960" height="569"></iframe>
+                    </div>
                 </div>
               </div>
             </article>
