--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="col-md-7">
             <h1>Hey, I'm Josephine.</h1>
                 <p>I'm a designer and am currently studying at the University of Arkansas at 
-                Little Rock (UALR). I'll be graduating this December 2022 with a 
+                Little Rock (UALR). I'll graduate this December 2022 with a 
                 Bachelors of Arts Web Design & Development.</p>
                 <p>I am passionate about UI/UX design and about exploring ways of applying art as a tool for visual communication.</p>
                 <p>Here is my <a href="assets/documents/resume.pdf" target="blank">resume<span class="screen-reader-only">(opens in a new tab)</span></a> & <a href="assets/documents/cover-letter.pdf" 
