--- a/typography.html
+++ b/typography.html
@@ -32,7 +32,7 @@
         </div>
     </header>
     <div class="container typography">
-        <div class="row feature">
+        <div class="row feature fade-in-image">
             <div class="col-12">
                 <a href="assets/images/menu-redesign.webp">
                     <img src="assets/images/menu-redesign.webp" alt="a menu of Sonny William's Steakhouse redesigned a creative way using typography principles">
@@ -49,7 +49,7 @@
                         These pieces are an exploration of the art and practice of typography as a tool for visual communication.
                         You may click on each image for a larger view.</p>
                 </div>
-                <div class="col-8 col-md-5">
+                <div class="col-8 col-md-5 scroll-reveal box tag">
                     <a href="assets/images/info-type-1.1.webp"><img src="assets/images/info-type-1.1.webp" alt="information type-1 creatively rearranged using typography principles"></a>    
                 </div>
             </div>
@@ -57,11 +57,11 @@
         
             <article class="article-2">
             <div class="row">
-                <div class="col-md">
+                <div class="col-md scroll-reveal box tag">
                     <a href="assets/images/info-type-2.1.webp"><img src="assets/images/info-type-2.1.webp" alt="information type-2 creatively rearranged using typography principles">
                     </a>
                 </div>
-                <div class="col-md">
+                <div class="col-md scroll-reveal box tag">
                     <a href="assets/images/info-type-3.1.webp"><img src="assets/images/info-type-3.1.webp" alt="information type-3 creatively rearranged using typography principles">
                     </a>
                 </div>
@@ -76,7 +76,7 @@
                         Completed as part of the course, ARST 3340: Intro To Graphic Design.
                     </p>
                 </div>
-                <div class="col-8 col-md-5">
+                <div class="col-8 col-md-5 scroll-reveal box tag">
                     <a href="assets/images/poster.webp"><img src="assets/images/poster.webp" alt="poster raising awareness about a particular social issue, the Stand Your Ground law."> 
                     </a>
                 </div>
@@ -84,11 +84,11 @@
             </article>
             <article class="article-4">
             <div class="row justify-content-between align-items-center">
-                <div class="col-md-7">
+                <div class="col-md-7 scroll-reveal box tag">
                     <a href="assets/images/publication.webp"><img src="assets/images/publication.webp" alt="a publication article for a fictional magazine called Road">
                     </a>
                 </div>
-                <div class="col-8 col-md-4">
+                <div class="col-8 col-md-4 scroll-reveal box tag">
                     <a href="assets/images/magazine-cover.webp"><img src="assets/images/magazine-cover.webp" alt="cover design for a fictional magazine called Road">
                     </a>
                 </div>
@@ -120,5 +120,6 @@
   </div>
   </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="assets/js/transition.js"></script>
 </body>
 </html>
