--- a/database.html
+++ b/database.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <title>JAW's Portfolio</title>
@@ -83,7 +83,7 @@
     <li class="ms-3"><a class="text-muted" href="mailto:joweathington@gmail.com">EMAIL</a></li>
     <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/josephine-aaron-weathington/">LINKEDIN</a></li>
   </ul>
-  </div>
+</div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 <script src="assets/js/transition.js"></script>
