--- a/munch.html
+++ b/munch.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <section class="info">
-        <div class="row">
+        <div class="row justify-content-between">
             <div class="col-6 col-md-4">
                 <h1>CPSC 4379 FOOD ORDERING SERVICE APP 2022</h1>
                 <p>A prototype design of a food app for a college campus that allows the various restaurants on campus to deliver directly to 
@@ -49,7 +49,7 @@
                 <a href="">Explore the design process.</a>
             </div>
             <div class="col-md-8">
-                <a href="">image</a>
+                <p>coming soon</p>
             </div>
         </div>
         </section>
