--- a/ux-campus-police.html
+++ b/ux-campus-police.html
@@ -44,9 +44,9 @@
           <a href="">Interact with the prototype.</a>
           <a href="">Explore the design process</a>
         </div>
-        <div class="col-md">
-          <a href="">Image</a>
-        </div>
+        <div class="col-md-8">
+          <p>coming soon</p>
+      </div>
       </div>
     </section>
 <!--ARTICLES-->
