--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container intro">
     <section class="intro">
         <div class="row about justify-content-between">
-            <div class="col-md-7">
+            <div class="col-lg-7">
             <h1>Hey, I'm Josephine.</h1>
                 <p>I'm a designer and am currently studying at the University of Arkansas at 
                 Little Rock (UALR). I'll graduate this December 2022 with a 
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4"><img src="assets/images/temporary-portrait.jpg" alt="self-portrait"> </div>
+            <div class="col-lg-4"><img src="assets/images/temporary-portrait.jpg" alt="self-portrait"> </div>
         </div>
     </section>
 </div>
