--- a/index.html
+++ b/index.html
@@ -74,7 +74,17 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4"><img src="assets/images/temporary-portrait.jpg" alt="self-portrait"> </div>
+            <div class="col-lg-4 portrait">
+             <!--   <img src="assets/images/temporary-portrait.jpg" alt="self-portrait"> -->
+                <img src="https://thomaswallace.net/demos/responsive-srcset/jupiter-400.jpg" alt="Jupiter"
+                srcset="https://thomaswallace.net/demos/responsive-srcset/jupiter-3000.jpg 3000w, 
+                        https://thomaswallace.net/demos/responsive-srcset/jupiter-2000.jpg 2000w,
+                        https://thomaswallace.net/demos/responsive-srcset/jupiter-1000.jpg 1000w,
+                        https://thomaswallace.net/demos/responsive-srcset/jupiter-600.jpg 600w,
+                        https://thomaswallace.net/demos/responsive-srcset/jupiter-400.jpg 400w"
+                sizes="(min-width:1000px) 30vw, 400px;"
+         >
+            </div>
         </div>
     </section>
 </div>
