--- a/index.html
+++ b/index.html
@@ -76,14 +76,9 @@
             </div>
             <div class="col-lg-4 portrait">
              <!--   <img src="assets/images/temporary-portrait.jpg" alt="self-portrait"> -->
-                <img src="https://thomaswallace.net/demos/responsive-srcset/jupiter-400.jpg" alt="Jupiter"
-                srcset="https://thomaswallace.net/demos/responsive-srcset/jupiter-3000.jpg 3000w, 
-                        https://thomaswallace.net/demos/responsive-srcset/jupiter-2000.jpg 2000w,
-                        https://thomaswallace.net/demos/responsive-srcset/jupiter-1000.jpg 1000w,
-                        https://thomaswallace.net/demos/responsive-srcset/jupiter-600.jpg 600w,
-                        https://thomaswallace.net/demos/responsive-srcset/jupiter-400.jpg 400w"
-                sizes="(min-width:1000px) 30vw, 400px;"
-         >
+                <img src="assets/images/portrait-sm.jpg 400w" alt="Jupiter"
+                srcset="assets/images/temporary-portrait.jpg 1000w, assets/images/portrait-md.jpg 600w, assets/images/portrait-sm.jpg 400w"
+                sizes="(min-width:400px) 30vw, 400w;">
             </div>
         </div>
     </section>
